--- a/dockerfiles/nginx/default.conf
+++ b/dockerfiles/nginx/default.conf
@@ -1,8 +1,8 @@
 server {
     listen 80;
-    index index.php index.html;
-    server_name _;
+    server_name localhost;
     root /var/www/html/public;
+    index index.php index.html;
 
     location / {
         try_files $uri $uri/ /index.php?$query_string;
@@ -10,7 +10,29 @@ server {
 
     location ~ \.php$ {
         try_files $uri =404;
-        fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        fastcgi_pass php:9000;
+        fastcgi_index index.php;
+        include fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param PATH_INFO $fastcgi_path_info;
+    }
+}
+
+server {
+    listen 443 ssl;
+    server_name localhost;
+    root /var/www/html/public;
+    index index.php index.html;
+
+    ssl_certificate /etc/nginx/certs/localhost.pem;
+    ssl_certificate_key /etc/nginx/certs/localhost-key.pem;
+
+    location / {
+        try_files $uri $uri/ /index.php?$query_string;
+    }
+
+    location ~ \.php$ {
+        try_files $uri =404;
         fastcgi_pass php:9000;
         fastcgi_index index.php;
         include fastcgi_params;
