--- a/src/composer.json
+++ b/src/composer.json
@@ -10,9 +10,11 @@
         "inertiajs/inertia-laravel": "^2.0",
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.2",
+        "laravel/scout": "^10.23",
         "laravel/tinker": "^2.10.1",
         "laravel/wayfinder": "^0.1.9",
-        "owen-it/laravel-auditing": "^14.0"
+        "owen-it/laravel-auditing": "^14.0",
+        "typesense/typesense-php": "^5.2"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.16",
