Dashboard: first draft

--- a/src/.env.example
+++ b/src/.env.example
@@ -64,3 +64,15 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+SCOUT_DRIVER=typesense
+TYPESENSE_API_KEY=masterKey
+TYPESENSE_HOST=localhost
+TYPESENSE_PORT=8108
+TYPESENSE_PROTOCOL=http
+TYPESENSE_PATH=
+TYPESENSE_CONNECTION_TIMEOUT_SECONDS=2
+TYPESENSE_HEALTHCHECK_INTERVAL_SECONDS=30
+TYPESENSE_NUM_RETRIES=3
+TYPESENSE_RETRY_INTERVAL_SECONDS=1
+TYPESENSE_IMPORT_ACTION=upsert
