--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -5,6 +5,7 @@ services:
     restart: unless-stopped
     user: "www-data"
     volumes:
+      - app_code:/var/www/html
       - /srv/evolnow/app/.env:/var/www/html/.env:ro
       - /srv/evolnow/app/storage/logs:/var/www/html/storage/logs
     expose:
@@ -21,6 +22,7 @@ services:
       - "80:80"
       - "443:443"
     volumes:
+      - app_code:/var/www/html:ro
       - /srv/evolnow/nginx/evolnow.conf:/etc/nginx/conf.d/default.conf:ro
       - /etc/letsencrypt:/etc/letsencrypt:ro
 
@@ -44,5 +46,6 @@ services:
       - typesense_data:/data
 
 volumes:
+  app_code:
   typesense_data:
   valkey_data:
