--- a/src/.env.example
+++ b/src/.env.example
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=https://localhost:8443
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -20,14 +20,14 @@ LOG_STACK=daily
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-DB_HOST=127.0.0.1
-DB_PORT=3306
+DB_CONNECTION=pgsql
+DB_HOST=postgres
+DB_PORT=5432
 DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=postgres
+DB_PASSWORD=password
 
-SESSION_DRIVER=database
+SESSION_DRIVER=redis
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
@@ -40,14 +40,14 @@ QUEUE_CONNECTION=database
 CACHE_STORE=database
 # CACHE_PREFIX=
 
-MEMCACHED_HOST=127.0.0.1
+MEMCACHED_HOST=memcached
 
 REDIS_CLIENT=phpredis
-REDIS_HOST=127.0.0.1
+REDIS_HOST=redis
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=ses
+MAIL_MAILER=smtp
 #MAIL_SCHEME=null
 MAIL_HOST=mailpit
 MAIL_PORT=1025
@@ -67,7 +67,7 @@ VITE_APP_NAME="${APP_NAME}"
 
 SCOUT_DRIVER=typesense
 TYPESENSE_API_KEY=masterKey
-TYPESENSE_HOST=localhost
+TYPESENSE_HOST=typesense
 TYPESENSE_PORT=8108
 TYPESENSE_PROTOCOL=http
 TYPESENSE_PATH=
