--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,7 @@ services:
             - ./src/storage:/var/www/html/storage:delegated
             - ./src/vendor:/var/www/html/vendor:delegated
             - ./src/.env.docker:/var/www/html/.env:delegated
+            - ./src/.env.testing:/var/www/html/.env.testing:delegated
             - ./src/composer.json:/var/www/html/composer.json:delegated
             - ./src/composer.lock:/var/www/html/composer.lock:delegated
             - ./certs/localhost.pem:/etc/nginx/certs/localhost.pem:ro
